# chzzk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
chzzk/: Cargo.toml  README.md
chzzk/src/: channel.rs  chzzk_error.rs  client.rs  env.rs  error.rs  lib.rs  macro.rs  request_builder.rs  search.rs  search_channel.rs  search_live.rs  search_video.rs
chzzk/src/chat/: chat_client.rs  chat_handle.rs  handler_vec.rs  mod.rs  types.rs
chzzk/src/data/: authorization.rs  channel.rs  mod.rs  search_channel.rs  search_live.rs  search_video.rs  user.rs
chzzk/src/data/unofficial/: search_channel.rs  user.rs
chzzk/src/unofficial/: client.rs  mod.rs  request_builder.rs
chzzk/src/unofficial/chat/: chat_client.rs  mod.rs  types.rs
chzzk/src/unofficial/data/: channel.rs  mod.rs  search_live.rs
examples/: Cargo.toml  auth.rs  auth.txt  connect_chat.rs  echo_bot.rs  get_channel_info.rs  get_channels.rs  get_lives.rs  get_videos.rs  pin_chat.rs  search_channels.rs
examples/unofficial/: connect_chat.rs  echo_bot.rs  get_channel_info.rs  pin_chat.rs  search_channels.rs
helper/: struct_gen.py
src/: main.rs
