[package]
name = "chzzk"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["5-23 <rustacean@5-23.dev>", "Jibago <wani3327@gmail.com>"]
description = "Unofficial SDK of Korean live platform chzzk"

[dependencies]
reqwest = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
