[package]
name = "chzzk"
version = "0.3.3"
edition = "2021"
rust-version = "1.84"
authors = ["5-23 <rustacean@5-23.dev>", "Jibago <wani3327@gmail.com>"]
license = "MIT"
repository = "https://github.com/P-Asta/chzzk-rs"
description = "Unofficial SDK for the Korean video streaming platform Chzzk"
categories = ["api-bindings"]
keywords = ["chzzk", "naver"]

[dependencies]
futures = "0.3.31"
rand = "0.8.5"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio-util = "0.7.13"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
chrono = "0.4.39"

[features]
chzzk_debug = []
