[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[dependencies]
chzzk = { path = "../chzzk", features = ["chzzk_debug"] }
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "connect_chat"
path = "connect_chat.rs"

[[example]]
name = "echo_bot"
path = "echo_bot.rs"

[[example]]
name = "get_channel_info"
path = "get_channel_info.rs"

[[example]]
name = "search_channels"
path = "search_channels.rs"

[[example]]
name = "pin_chat"
path = "pin_chat.rs"
